@@ -35,6 +35,7 @@ typedef enum {
 	ERR_INVALID_FILE,		// Is not a TI file
 	ERR_BAD_FILE,			// Same as above
 	ERR_FILE_CHECKSUM,		// Checksum file error
+	ERR_FILE_ZIP,			// (Un)Zip internal error
 } FileError;
 
 #endif
