@@ -14,7 +14,8 @@ Log:
 	- pass CalcModel to 'tifiles_content_create_xxxx' => increased so major number
 	- added functions for adding/removing entr(y)ies in regular file
 		=> the last two changes have been done to avoid/minimize manipulation of
-			internal fields in FileContent structure (make them opaque/private).
+			internal fields in FileContent structure (make them opaque/private)
+	- added full TiGroup (*.tig) support: read, write, list
 
 - 14/01/2006, version 0.0.4: roms
 	- replaced assertion checks by warnings in the typesXX.c modules.
